--- a/packages/react-forms/src/Components/Form.mdx
+++ b/packages/react-forms/src/Components/Form.mdx
@@ -222,3 +222,98 @@ const MyForm = () => {
     </Form>
   );
 };`}/>
+
+# Form Arrays
+<Story of={FormStories.FormArrays} />
+<Source of={FormStories.FormArrays} language="tsx" code={`
+import { Form, FormArray, FormBuilder } from '@hubfx/react-forms';
+import { arrayLengthRequired } from './Validators';
+import { contactFormConfig } from './contactFormConfig';
+
+const MyForm = () => {
+  const formConfig = FormBuilder.group({
+    controls: {
+      emergencyContacts: FormBuilder.array({
+        validators: [arrayLengthRequired],
+        controls: [
+          {
+            firstName: 'Homer',
+            lastName: 'Simpson',
+            email: 'homer@homer.com',
+          },
+        ].map(contactFormConfig),
+      }),
+    },
+  });
+
+  return (
+    <Form
+      formConfig={formConfig}
+    >
+      {() => {
+        return (
+          <div className="form-group">
+            <p>
+              <b>Emergency Contacts:</b>
+            </p>
+            <FormArray controlRef={['emergencyContacts']}>
+              {({
+                formArray: {
+                  controls,
+                  errors: { arrayLengthRequired },
+                },
+                addControl,
+                removeControl,
+              }) => (
+                <>
+                  {arrayLengthRequired && (
+                    <p className="text-danger">
+                      At least one emergency contact required.
+                    </p>
+                  )}
+                  {controls.map((control, index) => {
+                    return (
+                      <div key={control.controlRef.join(',')}>
+                        <p>
+                          <b>Contact #{index + 1}:</b>
+                        </p>
+                        <div className="d-flex align-items-center">
+                          <ContactForm
+                            formGroup={control as FormGroup<Contact>}
+                          />
+                          <button
+                            className="ml-5"
+                            type="button"
+                            onClick={() => {
+                              removeControl(control.controlRef);
+                            }}
+                          >
+                            Remove Contact
+                          </button>
+                        </div>
+                      </div>
+                    );
+                  })}
+                  <button
+                    type="button"
+                    onClick={() => {
+                      addControl(
+                        contactFormConfig({
+                          firstName: '',
+                          lastName: '',
+                          email: '',
+                        }),
+                      );
+                    }}
+                  >
+                    Add Contact
+                  </button>
+                </>
+              )}
+            </FormArray>
+          </div>
+        );
+      }}
+    </Form>
+  );
+};`}/>
