--- a/packages/react-forms/src/Components/Form.mdx
+++ b/packages/react-forms/src/Components/Form.mdx
@@ -23,7 +23,14 @@ import * as FormStories from './Form.stories';
     </ul>
   </nav>
 </div>
-# BasicControl <a name="basic-control"></a>
+<div className="container">
+
+# Hubfx React Forms
+
+<br />
+<br />
+
+## BasicControl <a name="basic-control"></a>
 <Story of={FormStories.BasicControl} />
 <Source of={FormStories.BasicControl} language="tsx" code={`
 import { FormGroup, FormBuilder } from '@hubfx/forms';
@@ -50,7 +57,7 @@ const MyForm = () => {
   );
 };`}/>
 
-# Validation <a name="validation"></a>
+## Validation <a name="validation"></a>
 <Story of={FormStories.Validation} />
 <Source of={FormStories.Validation} language="tsx" code={`
 import { Form, FormBuilder, Validators } from '@hubfx/react-forms';
@@ -93,7 +100,7 @@ const MyForm = () => {
   );
 };`}/>
 
-# Async Validation <a name="async-validation"></a>
+## Async Validation <a name="async-validation"></a>
 <Story of={FormStories.AsyncValidation} />
 <Source of={FormStories.AsyncValidation} language="tsx" code={`
 import { Form, FormBuilder, Validators, ValidatorAsyncFn } from '@hubfx/react-forms';
@@ -168,7 +175,7 @@ const MyForm = () => {
   );
 };`}/>
 
-# Form Arrays <a name="form-arrays"></a>
+## Form Arrays <a name="form-arrays"></a>
 <Story of={FormStories.FormArrays} />
 <Source of={FormStories.FormArrays} language="tsx" code={`
 import { Form, FormArray, FormBuilder } from '@hubfx/react-forms';
@@ -263,7 +270,7 @@ const MyForm = () => {
   );
 };`}/>
 
-# Resetting Controls <a name="resetting-forms"></a>
+## Resetting Controls <a name="resetting-forms"></a>
 <Story of={FormStories.ResetForm} />
 <Source of={FormStories.ResetForm} language="tsx" code={`
 import { Form, FormArray, FormBuilder } from '@hubfx/react-forms';
@@ -305,3 +312,5 @@ const MyForm = () => {
     </Form>
   );
 };`}/>
+
+</div>
